@@ -78,7 +78,7 @@ GtkNotebook *new_window(int argc,
 			char *argv[],
 			gchar *shell,
 			gchar *environment,
-			gchar *local_list,
+			gchar *locale_list,
 			gchar *PWD,
 			gchar *HOME,
 			gchar *VTE_CJK_WIDTH_STR,
