@@ -48,4 +48,4 @@ gboolean read_socket(GIOChannel *channel, GIOCondition condition, gpointer user_
 gboolean socket_fault(int i, GError *error, GIOChannel* channel, gboolean unref);
 gboolean clear_channel(GIOChannel* channel, gboolean unref);
 gint shutdown_socket_server(gpointer data);
-gchar *get_local_list();
+gchar *get_locale_list();
